# private-rag-assistant

./: .gitignore  00_hello_world.py  CLAUDE.md  PROJECT_BRIEF.md  README.md  app.py  pyproject.toml  pytest.ini  requriements.txt  save_session.py  test-results.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  publish-quarto.yml
_quarto_site/: evaluation.html  index.html  presentation.html  report.html  search.json
docs/_source/: conf.py  evaluation.md  index.md  notebooks.md  output_report.md  report.md
docs/_source/api/: index.md
notebooks/: 02_query.ipynb
quarto/: .gitignore  _quarto.yml  baseline_comparison.qmd  confidence.qmd  demo_app.qmd  evaluation.qmd  github_workflow.qmd  index.qmd  ingestion.qmd  logging.qmd  output_report.qmd  presentation.qmd  query.qmd  rag_testing_methodology.qmd  report.qmd  sphinx_docs.qmd  test-results.json  tests.qmd
rag/: __init__.py  evaluate.py  ingest.py  logger.py  query.py
scripts/: github_setup.ps1  ollama_ready.py  setup.ps1
tests/: README.md  __init__.py  conftest.py  test_app.py  test_evaluate.py  test_ingest.py  test_logger.py  test_query.py  test_questions.json  test_setup.py
