[project]
name = "private-rag-assistant"
version = "0.1.0"
description = "A local RAG pipeline for the TU Dublin CPD Foundations of AI capstone"
authors = [{ name = "Alan McDonagh", email = "mcdonagh.alan09@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-chroma>=0.2",
    "chromadb>=0.4.0",
    "langchain-ollama>=0.2",
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.8",
    "sentence-transformers>=3.0",
    "pypdf>=4.0",
    "requests>=2.32",
    "ragas>=0.1",
    "python-dotenv>=1.0",
    "jupyter>=1.0",
    "pytest>=8.0",
    "pytest-json-report>=1.5",
    "black>=24.0",
    "ruff>=0.4",
    "sphinx",
    "pydantic>=2.0,<3",
    "pdfplumber>=0.1.1",
    "sentence-transformers>=3.0",
    "textsplit>=0.1.0",
    "pandas>=2.0.0",
    "ollama>=0.1.0",
    "myst-parser",
    "sphinx-rtd-theme",
]

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
